[gd_scene load_steps=11 format=3 uid="uid://gtufsfnhco7t"]

[ext_resource type="Script" uid="uid://uioy4qxipjgc" path="res://Scripts/GameOverScreen.gd" id="1_b2nlf"]
[ext_resource type="AudioStream" uid="uid://q64nbujd2vpo" path="res://Sounds/lose.wav" id="2_ouy8p"]
[ext_resource type="Script" uid="uid://jccc6d6xibh3" path="res://Scenes/DifficultyButton.gd" id="3_mwcmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqip5"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="SystemFont" id="SystemFont_ng7j2"]
font_names = PackedStringArray("Bahnschrift")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_077ju"]
font = SubResource("SystemFont_ng7j2")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_f7wom"]
font = SubResource("SystemFont_ng7j2")
font_size = 32

[sub_resource type="SystemFont" id="SystemFont_bsjcy"]
font_names = PackedStringArray("Bahnschrift")

[sub_resource type="SystemFont" id="SystemFont_lqorg"]
font_names = PackedStringArray("Bahnschrift")

[sub_resource type="SystemFont" id="SystemFont_hxsmb"]
font_names = PackedStringArray("Bahnschrift")

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_b2nlf")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pqip5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 170

[node name="GameOver" type="Label" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_077ju")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/GameOver"]
layout_mode = 2
offset_top = 75.0
offset_right = 1072.0
offset_bottom = 140.0
text = "Score: ###"
label_settings = SubResource("LabelSettings_f7wom")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 4

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_bsjcy")
theme_override_font_sizes/font_size = 32
text = " Restart "

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_lqorg")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="LoseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ouy8p")

[node name="Difficulty" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -347.0
offset_top = -209.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_hxsmb")
theme_override_font_sizes/font_size = 64
text = " Difficulty: 
###"
script = ExtResource("3_mwcmo")

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/Rows/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/Rows/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Difficulty" to="Difficulty" method="_on_pressed"]
